market ingest feat
